--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,59 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>API Node.js - Sistema de Produtos</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
+        <h1>🚀 Sistema de Produtos - API Node.js</h1>
+        
+        <!-- Seção de Login -->
+        <div class="login-section" id="loginSection">
+            <h2>🔐 Login</h2>
+            <form id="loginForm">
+                <input type="text" id="username" placeholder="Usuário (admin ou user)" required>
+                <input type="password" id="password" placeholder="Senha (1234)" required>
+                <button type="submit">Entrar</button>
+            </form>
+            <p class="hint">💡 Use: <strong>admin/1234</strong> (admin) ou <strong>user/1234</strong> (usuário)</p>
+        </div>
 
-    <h1>Olá</h1>
-    
+        <!-- Seção do Dashboard (aparece após login) -->
+        <div class="dashboard" id="dashboard" style="display: none;">
+            <div class="user-info">
+                <span id="userInfo">Usuário logado</span>
+                <button onclick="logout()" class="logout-btn">Sair</button>
+            </div>
+
+            <!-- Status da API -->
+            <div class="status" id="status">
+                <p class="loading">🔄 Verificando status da API...</p>
+            </div>
+
+            <!-- Formulário de Produto (só para admin) -->
+            <div class="product-form" id="productForm" style="display: none;">
+                <h3>➕ Adicionar Produto</h3>
+                <form id="addProductForm">
+                    <input type="text" id="produtoDesc" placeholder="Descrição do produto" required>
+                    <input type="number" id="produtoValor" placeholder="Valor" step="0.01" required>
+                    <input type="text" id="produtoMarca" placeholder="Marca" required>
+                    <button type="submit">Adicionar Produto</button>
+                </form>
+            </div>
+
+            <!-- Lista de Produtos -->
+            <div class="products-section">
+                <h3>📦 Produtos Cadastrados</h3>
+                <button onclick="loadProducts()" class="refresh-btn">🔄 Atualizar Lista</button>
+                <div id="productsList" class="products-grid">
+                    <p class="loading">Carregando produtos...</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="app.js"></script>
 </body>
 </html>
