--- a/public/index.html
+++ b/public/index.html
@@ -8,17 +8,17 @@
 </head>
 <body>
     <div class="container">
-        <h1>🚀 Sistema de Produtos - API Node.js</h1>
+        <h1> Sistema de Produtos - API Node.js</h1>
         
         <!-- Seção de Login -->
         <div class="login-section" id="loginSection">
-            <h2>🔐 Login</h2>
+            <h2> Login</h2>
             <form id="loginForm">
                 <input type="text" id="username" placeholder="Usuário (admin ou user)" required>
                 <input type="password" id="password" placeholder="Senha (1234)" required>
                 <button type="submit">Entrar</button>
             </form>
-            <p class="hint">💡 Use: <strong>admin/1234</strong> (admin) ou <strong>user/1234</strong> (usuário)</p>
+            <p class="hint">💡 Valores de teste: <strong>admin/1234</strong> (admin) ou <strong>user/1234</strong> (usuário)</p>
         </div>
 
         <!-- Seção do Dashboard (aparece após login) -->
