--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="header">
-        <h1>Sistema de Produtos</h1>
+        <h1>SISTEMA DE PRODUTOS</h1>
     </div>
 
     <p>Aplicação com foco no teste do consumo de API desenvolvida em Node e Express</p>
@@ -42,7 +42,7 @@
          
             <!-- Formulário de Produto (só para admin) -->
             <div class="product-form" id="productForm" style="display: none;">
-                <h3>➕ Adicionar Produto</h3>
+                <h3> Adicionar Produto</h3>
                 <form id="addProductForm">
                     <input type="text" id="produtoDesc" placeholder="Descrição do produto" required>
                     <input type="number" id="produtoValor" placeholder="Valor" step="0.01" required>
